Added Education and Experiences section

--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -216,39 +216,34 @@
 
 
 
-  
-  
 
-
-
-  
 
 
 <div class="container-fluid home" id="home">
   <style>
      
     #homePageBackgroundImageDivStyled {
-      background-image: url('/images/site/background_hu18099585074937756895.png');
+      background-image: url('/images/site/background1_hu11686135360818492850.jpeg');
     }
      
     @media (min-width: 500px) and (max-width: 800px) {  
       #homePageBackgroundImageDivStyled {   
-          background-image: url('/images/site/background_hu13072280377756745512.png');
+          background-image: url('/images/site/background1_hu9268609018668416951.jpeg');
         }
     }
     @media (min-width: 801px) and (max-width: 1200px) {  
       #homePageBackgroundImageDivStyled {   
-          background-image: url('/images/site/background_hu9472794999408321359.png');
+          background-image: url('/images/site/background1_hu16871910683839405518.jpeg');
         }
     }
     @media (min-width: 1201px) and (max-width: 1500px) {  
       #homePageBackgroundImageDivStyled {   
-          background-image: url('/images/site/background_hu13492686506097701354.png');
+          background-image: url('/images/site/background1_hu3469984168838680323.jpeg');
         }
     }
     @media (min-width: 1501px) {  
       #homePageBackgroundImageDivStyled {   
-          background-image: url('/images/site/background.png');
+          background-image: url('/images/site/background1.jpeg');
         }
     }
     </style>
