Changed website title

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -13,7 +13,7 @@
 
 
 <meta property="og:url" content="http://localhost:1313/search/">
-  <meta property="og:site_name" content="Unique&#39;s Blog">
+  <meta property="og:site_name" content="Unique Karki">
   <meta property="og:title" content="Search Results">
   <meta property="og:description" content="This file exists solely to respond to /search URL with the related search layout template.
 No content shown here is rendered, all content is based in the template layouts/page/search.html
@@ -109,7 +109,7 @@ Initial setup Search depends on additional output content type of JSON in config
     </button>
     
     <a class="navbar-brand" href="/">
-      Unique&#39;s Blog</a>
+      Unique Karki</a>
     <button
       class="navbar-toggler navbar-light"
       id="navbar-toggler"
