--- a/public/index.html
+++ b/public/index.html
@@ -698,7 +698,11 @@
             <i class="fa-solid fa-location-dot"></i> Dhulikhel, Nepal
         </p>
         
-        <p>Conferences <br/> <a href="files/slide_ann_ga.pdf" target="_blank">National Conference On Mathematics And Its Application - NCMA 2022</a> </br> <a href="files/Final_ICMA_2024.pdf" target="_blank">International Conference On Mathematics And Application - ICMA 2024</a> </br> <br/> Research Paper <br/> <a href="files/Research_paper.pdf" target="_blank">Artificial Neural Network-Genetic and PSO Algorithm for Optimization of Multivariate Function - An Application to Lactic Acid Production</a></p>
+        <p>Conferences <br>
+<a href="files/slide_ann_ga.pdf" target="_blank">National Conference On Mathematics And Its Application - NCMA 2022</a> <br>
+<a href="files/Final_ICMA_2024.pdf" target="_blank">International Conference On Mathematics And Application - ICMA 2024</a> <br> <br>
+Research Paper <br>
+<a href="files/Research_paper.pdf" target="_blank">Artificial Neural Network-Genetic and PSO Algorithm for Optimization of Multivariate Function - An Application to Lactic Acid Production</a></p>
     </div>
     
     <div class="positions">
