--- a/public/search/index.html
+++ b/public/search/index.html
@@ -303,6 +303,15 @@ Initial setup Search depends on additional output content type of JSON in config
   
   
     
+    <li><a class=" list-link" href="/posts/year-recap/" title="A Year in Recap">A Year in Recap</a></li>
+  
+
+  
+  
+  
+  
+  
+    
     <li><a class=" list-link" href="/posts/my-story/" title="My Story">My Story</a></li>
   
 
